unpackaged/main/default/objects/LH__LH_Error__c/LH__LH_Error__c.object-meta.xml
<CustomObject>
    <label>Lookup Helper Exception</label>
    <nameField>
        <displayFormat>E-{0}</displayFormat>
        <label>Lookup Helper Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lookup Helper Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>