unpackaged/main/default/objects/LH__LH_Error__c/fields/LH__Exception_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>LH__Exception_Stack_Trace__c</fullName>
    <label>Exception Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>