unpackaged/main/default/objects/LH__LH_Error__c/fields/LH__Lookup_Helper_Setting__c.field-meta.xml
<CustomField>
    <fullName>LH__Lookup_Helper_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The setting from which this exception record was created from.</inlineHelpText>
    <label>Lookup Helper Setting</label>
    <referenceTo>LH__Lookup_Helper_Setting__c</referenceTo>
    <relationshipLabel>Lookup Helper Exceptions</relationshipLabel>
    <relationshipName>LH_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>